# deadbeef-gnome-mmkeys

./: .gitignore  CMakeLists.txt  Makefile  README  build.sh  ddb_gnome_mmkeys.c  gnome_mmkeys.c  gnome_mmkeys_marshal.c  gnome_mmkeys_marshal.h  install.sh  make.sh  makefile  marshal-gen.sh  marshal.list
